force-app/main/default/objects/Treatment_Center__c/Treatment_Center__c.object-meta.xml
<CustomObject>
    <label>Treatment Center</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Treatment Center</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TreatmentCenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>