force-app/main/default/objects/Treatment_Center__c/fields/Available_beds__c.field-meta.xml
<CustomField>
    <fullName>Available_beds__c</fullName>
    <label>Available beds</label>
    <summarizedField>Rooms__c.AvailableBedsForTC__c</summarizedField>
    <summaryForeignKey>Rooms__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>