force-app/main/default/objects/Treatment_Center__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&apos;US&apos;</defaultValue>
    <label>Country</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>