force-app/main/default/objects/Treatment_Center__c/fields/Houses_in_this_Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Houses_in_this_Treatment_Center__c</fullName>
    <label>Houses in this Treatment Center</label>
    <summaryForeignKey>House__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>