force-app/main/default/objects/Treatment_Center__c/fields/No_Of_Houses__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Houses__c</fullName>
    <label>Number of Houses to Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>