force-app/main/default/objects/Treatment_Center__c/fields/Occupied_Beds__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Beds__c</fullName>
    <label>Occupied Beds</label>
    <summarizedField>Rooms__c.No_Of_Occupied_Beds__c</summarizedField>
    <summaryForeignKey>Rooms__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>