force-app/main/default/objects/Treatment_Center__c/fields/Percentage_Availability__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Availability__c</fullName>
    <formula>Available_beds__c/Total_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Availability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>