force-app/main/default/objects/Treatment_Center__c/fields/Percentage_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Occupied__c</fullName>
    <formula>Occupied_Beds__c  /  Total_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Occupied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>