force-app/main/default/objects/Treatment_Center__c/fields/Percentage_of_available_beds__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_available_beds__c</fullName>
    <formula>Available_beds__c/Total_Beds__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of available beds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>