force-app/main/default/objects/Treatment_Center__c/fields/Programs_List__c.field-meta.xml
<CustomField>
    <fullName>Programs_List__c</fullName>
    <label>Programs List</label>
    <type>TextArea</type>
</CustomField>