force-app/main/default/objects/Treatment_Center__c/fields/Rooms_in_this_Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Rooms_in_this_Treatment_Center__c</fullName>
    <label>Rooms in this Treatment Center</label>
    <summaryForeignKey>Rooms__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>