force-app/main/default/objects/Treatment_Center__c/fields/Set_up_Houses__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Houses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keep this field unchecked if you offer accommodation only in the form of rooms</description>
    <inlineHelpText>If this box is checked, then you cannot create rooms and can only set up houses .One room will be automatically created for each house. If you want to add more rooms, please add it from the related list.</inlineHelpText>
    <label>Set Up Houses</label>
    <type>Checkbox</type>
</CustomField>