force-app/main/default/objects/Treatment_Center__c/fields/State_Text__c.field-meta.xml
<CustomField>
    <fullName>State_Text__c</fullName>
    <label>State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>