force-app/main/default/objects/Treatment_Center__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <summarizedField>Rooms__c.Available_Beds__c</summarizedField>
    <summaryForeignKey>Rooms__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>