force-app/main/default/objects/Treatment_Center__c/fields/Total_Beds__c.field-meta.xml
<CustomField>
    <fullName>Total_Beds__c</fullName>
    <label>Total Beds</label>
    <summarizedField>Rooms__c.Total_Beds__c</summarizedField>
    <summaryForeignKey>Rooms__c.Treatment_Center__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>