force-app/main/default/objects/Treatment_Center__c/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Treatment Center</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>Treatment Center</relationshipLabel>
    <relationshipName>Treatment_Center</relationshipName>
    <type>Lookup</type>
</CustomField>