force-app/main/default/objects/Treatment_Center__c/fields/Treatment_center_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_center_Name__c</fullName>
    <label>Treatment Center Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>