force-app/main/default/objects/Treatment_Center__c/recordTypes/New_Treatment_Center.recordType-meta.xml
<RecordType>
    <fullName>New_Treatment_Center</fullName>
    <active>true</active>
    <label>New Treatment Center</label>
</RecordType>