force-app/main/default/objects/Treatment_Center__c/recordTypes/Treatment_Center.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Center</fullName>
    <active>true</active>
    <label>Treatment Center</label>
</RecordType>