force-app/main/default/objects/Treatment_Center__c/validationRules/Non_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>if(PRIORVALUE( room_to_create__c )!= TEXT(room_to_create__c),true,false)</errorConditionFormula>
    <errorMessage>You cannot enter these values again. If you want to add more rooms you can do it manually from the related lists.</errorMessage>
</ValidationRule>