force-app/main/default/objects/Treatment_Center__c/validationRules/SetUp_Houses_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SetUp_Houses_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Set_up_Houses__c == true,If(ISBLANK(TEXT( Add_houses__c)),True,False),False)</errorConditionFormula>
    <errorMessage>Please fill the number of houses if you have checked &quot;set up houses&quot;</errorMessage>
</ValidationRule>