force-app/main/default/objects/Treatment_Center__c/validationRules/Setup_rooms_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Setup_rooms_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Set_up_Houses__c ==false, 
 ISBLANK(TEXT( room_to_create__c )) , 
NOT( ISBLANK(TEXT( room_to_create__c )) ))</errorConditionFormula>
    <errorMessage>Please fill the field &apos;No. of rooms to be created&apos; if the field &apos;Set up houses&apos; is unchecked</errorMessage>
</ValidationRule>