force-app/main/default/objects/Treatment_Center__c/validationRules/Should_have_at_least_1_house.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_have_at_least_1_house</fullName>
    <active>true</active>
    <description>A treatment center should have at least 1 house</description>
    <errorConditionFormula>AND( PRIORVALUE(Houses_in_this_Treatment_Center__c) &lt; Houses_in_this_Treatment_Center__c,
Houses_in_this_Treatment_Center__c &lt; 1)</errorConditionFormula>
    <errorMessage>A treatment center should have at least one house</errorMessage>
</ValidationRule>