force-app/main/default/objects/Treatment_Center__c/validationRules/Should_not_be_more_than_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_not_be_more_than_50</fullName>
    <active>false</active>
    <errorConditionFormula>OR(No_Of_Houses__c &gt;50,No_Of_Houses__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>No_Of_Houses__c</errorDisplayField>
    <errorMessage>The number of houses in a treatment center cannot be less than 1 or more than 50. If your treatment center has more than 50 houses you can create and configure them manually from the related list.</errorMessage>
</ValidationRule>