force-app/main/default/objects/Treatment_Center__c/listViews/All_Treatment_Centers.listView-meta.xml
<ListView>
    <fullName>All_Treatment_Centers</fullName>
    <columns>Treatment_center_Name__c</columns>
    <columns>NAME</columns>
    <columns>Houses_in_this_Treatment_Center__c</columns>
    <columns>Rooms_in_this_Treatment_Center__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Treatment Centers</label>
</ListView>